# sdkwork-appstore

./: .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  Cargo.toml  GEMINI.md  README.md  package.json  pnpm-workspace.yaml  sdkwork.app.config.json
.sdkwork/: README.md
crates/sdkwork-api-appstore-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-api-appstore-assembly/specs/: README.md  component.spec.json
crates/sdkwork-api-appstore-assembly/src/: bootstrap.rs  generated.rs  http_route_manifest.rs  lib.rs  web_bootstrap.rs
crates/sdkwork-api-appstore-assembly/src/routes/: catalog.rs  catalog_backend.rs  listing_backend.rs  publisher_backend.rs
crates/sdkwork-api-appstore-standalone-gateway/: Cargo.toml  README.md
crates/sdkwork-api-appstore-standalone-gateway/specs/: component.spec.json
crates/sdkwork-api-appstore-standalone-gateway/src/: lib.rs  main.rs  readiness.rs
crates/sdkwork-api-appstore-standalone-gateway/src/bootstrap/: mod.rs  routers.rs
crates/sdkwork-api-appstore-standalone-gateway/src/routes/: market.rs  open_api.rs
crates/sdkwork-appstore-analytics-worker/: Cargo.toml  README.md
crates/sdkwork-appstore-analytics-worker/specs/: README.md  component.spec.json
crates/sdkwork-appstore-analytics-worker/src/: lib.rs  main.rs
crates/sdkwork-appstore-analytics-worker/src/bootstrap/: config.rs  mod.rs  repositories.rs
crates/sdkwork-appstore-analytics-worker/src/jobs/: chart_projection_job.rs  listing_metrics_job.rs  mod.rs
crates/sdkwork-appstore-analytics-worker/src/projection/: mod.rs  repository.rs
crates/sdkwork-appstore-analytics-worker/src/scheduler/: cron.rs  mod.rs
crates/sdkwork-appstore-analytics-worker/tests/: projection_integration.rs
crates/sdkwork-appstore-api-server/: Cargo.toml  README.md
crates/sdkwork-appstore-api-server/specs/: README.md  component.spec.json
crates/sdkwork-appstore-api-server/src/: health.rs  http_route_manifest.rs  main.rs  readiness.rs  web_bootstrap.rs
crates/sdkwork-appstore-api-server/src/bootstrap/: adapters.rs  mod.rs  routers.rs  state.rs
crates/sdkwork-appstore-api-server/src/preflight/: dependency_surfaces.rs  mod.rs
crates/sdkwork-appstore-api-server/src/routes/: catalog.rs  compliance.rs  library.rs  listing.rs  market.rs  moderation.rs  publisher.rs  release_routes.rs
crates/sdkwork-appstore-api-server/src/server/: mod.rs
crates/sdkwork-appstore-database-host/: Cargo.toml
crates/sdkwork-appstore-database-host/src/: lib.rs
crates/sdkwork-appstore-gateway-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-appstore-gateway-assembly/specs/: README.md  component.spec.json
crates/sdkwork-appstore-gateway-assembly/src/: bootstrap.rs  generated.rs  http_route_manifest.rs  lib.rs
crates/sdkwork-appstore-gateway-assembly/src/bootstrap/: decision_listing_projection.rs  submission_moderation.rs
crates/sdkwork-appstore-gateway-assembly/src/routes/: library.rs  listing.rs  metrics_backend.rs  mod.rs  moderation.rs  release_routes.rs
crates/sdkwork-appstore-moderation-service/: Cargo.toml  README.md
crates/sdkwork-appstore-moderation-service/specs/: README.md  component.spec.json
crates/sdkwork-appstore-moderation-service/src/: context.rs  lib.rs
crates/sdkwork-appstore-moderation-service/src/domain/: commands.rs  events.rs  mod.rs  models.rs  results.rs
crates/sdkwork-appstore-moderation-service/src/ports/: events.rs  listing_projection.rs  mod.rs  provider.rs  repository.rs
crates/sdkwork-appstore-moderation-service/src/service/: mod.rs  moderation_service.rs
crates/sdkwork-appstore-moderation-service/tests/: service_smoke.rs
crates/sdkwork-appstore-repository-sqlx/: Cargo.toml  README.md
crates/sdkwork-appstore-repository-sqlx/specs/: README.md  component.spec.json
crates/sdkwork-appstore-repository-sqlx/src/: error.rs  executor.rs  lib.rs  pool.rs
crates/sdkwork-appstore-repository-sqlx/src/db/: columns.rs  dialect.rs  indexes.rs  mod.rs  rows.rs  schema.rs
crates/sdkwork-appstore-repository-sqlx/tests/: integration_test.rs
crates/sdkwork-appstore-routes-common/: Cargo.toml
crates/sdkwork-appstore-routes-common/src/: api_response.rs  context.rs  http_support.rs  lib.rs  route_definition.rs  service_error.rs  state.rs
crates/sdkwork-appstore-service-host/: Cargo.toml  README.md
crates/sdkwork-appstore-service-host/specs/: README.md  component.spec.json
crates/sdkwork-appstore-service-host/src/: lib.rs
crates/sdkwork-appstore-standalone-gateway/: Cargo.toml  README.md
crates/sdkwork-appstore-standalone-gateway/specs/: component.spec.json
crates/sdkwork-appstore-standalone-gateway/src/: http_envelope.rs  lib.rs  main.rs  web_bootstrap.rs
crates/sdkwork-appstore-standalone-gateway/tests/: gateway_manifest_parity.rs
crates/sdkwork-router-catalog-open-api/: Cargo.toml  README.md
crates/sdkwork-router-catalog-open-api/specs/: README.md  component.spec.json
crates/sdkwork-router-catalog-open-api/src/: error.rs  lib.rs  manifest.rs  routes.rs
crates/sdkwork-router-catalog-open-api/tests/: open_route_manifest.rs
crates/sdkwork-router-market-backend-api/: Cargo.toml  README.md
crates/sdkwork-router-market-backend-api/specs/: component.spec.json
crates/sdkwork-router-market-backend-api/src/: error.rs  handlers.rs  http_route_manifest.rs  lib.rs  manifest.rs  routes.rs
crates/sdkwork-router-market-backend-api/tests/: route_manifest.rs
crates/sdkwork-routes-listing-app-api/: Cargo.toml  README.md
crates/sdkwork-routes-listing-app-api/specs/: component.spec.json
crates/sdkwork-routes-listing-app-api/src/: error.rs  handlers.rs  http_route_manifest.rs  lib.rs  manifest.rs  paths.rs  routes.rs  runtime.rs
crates/sdkwork-routes-listing-app-api/tests/: route_manifest.rs
crates/sdkwork-routes-release-app-api/: Cargo.toml  README.md
crates/sdkwork-routes-release-app-api/specs/: README.md  component.spec.json
crates/sdkwork-routes-release-app-api/src/: error.rs  handlers.rs  http_route_manifest.rs  lib.rs  manifest.rs  routes.rs  runtime.rs
crates/sdkwork-routes-release-app-api/tests/: route_manifest.rs
(+820 files in other folders)
