[workspace]
members = [
  "crates/sdkwork-appstore-api-server",
  "crates/sdkwork-appstore-service-host",
  "crates/sdkwork-appstore-repository-sqlx",
  "crates/sdkwork-appstore-analytics-worker",
  "crates/sdkwork-appstore-publisher-service",
  "crates/sdkwork-appstore-listing-service",
  "crates/sdkwork-appstore-release-service",
  "crates/sdkwork-appstore-catalog-service",
  "crates/sdkwork-appstore-library-service",
  "crates/sdkwork-appstore-moderation-service",
  "crates/sdkwork-appstore-compliance-service",
  "crates/sdkwork-appstore-market-service",
  "crates/sdkwork-routes-catalog-app-api",
  "crates/sdkwork-routes-listing-app-api",
  "crates/sdkwork-routes-release-app-api",
  "crates/sdkwork-routes-library-app-api",
  "crates/sdkwork-routes-publisher-app-api",
  "crates/sdkwork-routes-compliance-app-api",
  "crates/sdkwork-routes-moderation-backend-api",
  "crates/sdkwork-routes-catalog-backend-api",
  "crates/sdkwork-routes-listing-backend-api",
  "crates/sdkwork-routes-publisher-backend-api",
  "crates/sdkwork-routes-market-backend-api",
  "crates/sdkwork-routes-metrics-backend-api",
  "crates/sdkwork-routes-release-open-api",
  "crates/sdkwork-routes-catalog-open-api",
  "crates/sdkwork-routes-listing-open-api",
  "crates/sdkwork-routes-automation-open-api"
]
resolver = "2"

[workspace.dependencies]
sdkwork-web-bootstrap = { path = "../sdkwork-web-framework/crates/sdkwork-web-bootstrap" }
