[package]
name = "sdkwork-api-appstore-standalone-gateway"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "sdkwork-api-appstore-standalone-gateway"
path = "src/main.rs"

[dependencies]
axum = "0.8"
dotenvy = "0.15"
sdkwork-api-appstore-assembly.workspace = true
sdkwork-database-sqlx.workspace = true
sdkwork-web-axum.workspace = true
sdkwork-web-bootstrap.workspace = true
sdkwork-web-core.workspace = true
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
