[package]
name = "sdkwork-appstore-analytics-worker"
version = "0.1.0"
edition = "2021"
description = "SDKWork App Store analytics projection worker (metrics, charts, trending)."

[lib]
path = "src/lib.rs"

[[bin]]
name = "sdkwork-appstore-analytics-worker"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
sdkwork-appstore-database-host = { path = "../sdkwork-appstore-database-host" }
sdkwork-database-sqlx = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
