[package]
name = "sdkwork-appstore-api-server"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "sdkwork-appstore-api-server"
path = "src/main.rs"

[dependencies]
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
dotenvy = "0.15"
sdkwork-appstore-service-host = { path = "../sdkwork-appstore-service-host" }
sdkwork-appstore-repository-sqlx = { path = "../sdkwork-appstore-repository-sqlx" }
sdkwork-appstore-publisher-service = { path = "../sdkwork-appstore-publisher-service" }
sdkwork-appstore-listing-service = { path = "../sdkwork-appstore-listing-service" }
sdkwork-appstore-release-service = { path = "../sdkwork-appstore-release-service" }
sdkwork-appstore-catalog-service = { path = "../sdkwork-appstore-catalog-service" }
sdkwork-appstore-library-service = { path = "../sdkwork-appstore-library-service" }
sdkwork-appstore-moderation-service = { path = "../sdkwork-appstore-moderation-service" }
sdkwork-appstore-compliance-service = { path = "../sdkwork-appstore-compliance-service" }
sdkwork-appstore-market-service = { path = "../sdkwork-appstore-market-service" }
sdkwork-database-config = { path = "../../../sdkwork-database/crates/sdkwork-database-config" }
sdkwork-database-sqlx = { path = "../../../sdkwork-database/crates/sdkwork-database-sqlx" }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
sdkwork-iam-web-adapter = { path = "../../../sdkwork-appbase/crates/sdkwork-iam-web-adapter" }
sdkwork-web-axum = { path = "../../../sdkwork-web-framework/crates/sdkwork-web-axum" }
sdkwork-web-core = { path = "../../../sdkwork-web-framework/crates/sdkwork-web-core" }
