[package]
name = "sdkwork-appstore-gateway-assembly"
edition = "2021"
version = "0.1.0"
description = "Generated gateway assembly for sdkwork-appstore application HTTP plane."

[lib]
name = "sdkwork_appstore_gateway_assembly"
path = "src/lib.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
sdkwork-appstore-standalone-gateway = { path = "../sdkwork-appstore-standalone-gateway" }
sdkwork-appstore-database-host = { path = "../sdkwork-appstore-database-host" }
sdkwork-appstore-repository-sqlx = { path = "../sdkwork-appstore-repository-sqlx" }
sdkwork-appstore-catalog-service = { path = "../sdkwork-appstore-catalog-service" }
sdkwork-appstore-listing-service = { path = "../sdkwork-appstore-listing-service" }
sdkwork-appstore-release-service = { path = "../sdkwork-appstore-release-service" }
sdkwork-appstore-publisher-service = { path = "../sdkwork-appstore-publisher-service" }
sdkwork-appstore-library-service = { path = "../sdkwork-appstore-library-service" }
sdkwork-appstore-moderation-service = { path = "../sdkwork-appstore-moderation-service" }
sdkwork-appstore-compliance-service = { path = "../sdkwork-appstore-compliance-service" }
sdkwork-appstore-market-service = { path = "../sdkwork-appstore-market-service" }
sdkwork-appstore-service-host = { path = "../sdkwork-appstore-service-host" }
sdkwork-appstore-routes-common = { path = "../sdkwork-appstore-routes-common" }
sdkwork-web-bootstrap = { workspace = true }
sdkwork-routes-automation-open-api = { path = "../sdkwork-routes-automation-open-api" }
sdkwork-routes-catalog-app-api = { path = "../sdkwork-routes-catalog-app-api" }
sdkwork-routes-catalog-backend-api = { path = "../sdkwork-routes-catalog-backend-api" }
sdkwork-routes-catalog-open-api = { path = "../sdkwork-routes-catalog-open-api" }
sdkwork-routes-compliance-app-api = { path = "../sdkwork-routes-compliance-app-api" }
sdkwork-routes-library-app-api = { path = "../sdkwork-routes-library-app-api" }
sdkwork-routes-listing-app-api = { path = "../sdkwork-routes-listing-app-api" }
sdkwork-routes-listing-backend-api = { path = "../sdkwork-routes-listing-backend-api" }
sdkwork-routes-listing-open-api = { path = "../sdkwork-routes-listing-open-api" }
sdkwork-routes-market-backend-api = { path = "../sdkwork-routes-market-backend-api" }
sdkwork-routes-metrics-backend-api = { path = "../sdkwork-routes-metrics-backend-api" }
sdkwork-routes-moderation-backend-api = { path = "../sdkwork-routes-moderation-backend-api" }
sdkwork-routes-publisher-app-api = { path = "../sdkwork-routes-publisher-app-api" }
sdkwork-routes-publisher-backend-api = { path = "../sdkwork-routes-publisher-backend-api" }
sdkwork-routes-release-app-api = { path = "../sdkwork-routes-release-app-api" }
sdkwork-routes-release-open-api = { path = "../sdkwork-routes-release-open-api" }
