[package]
name = "sdkwork-appstore-moderation-service"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
sdkwork-appstore-authorization = { path = "../sdkwork-appstore-authorization" }
