[package]
name = "sdkwork-appstore-routes-common"
version = "0.1.0"
edition = "2021"
description = "Shared HTTP response mapping and request context helpers for App Store route crates."

[lib]
path = "src/lib.rs"

[dependencies]
axum = { version = "0.8", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
sdkwork-utils-rust = { workspace = true }
sdkwork-web-core = { workspace = true }
