[package]
name = "sdkwork-appstore-service-host"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
uuid = { version = "1", features = ["v4"] }
sdkwork-utils-rust = { workspace = true }
sdkwork-appstore-repository-sqlx = { path = "../sdkwork-appstore-repository-sqlx" }
sdkwork-appstore-publisher-service = { path = "../sdkwork-appstore-publisher-service" }
sdkwork-appstore-listing-service = { path = "../sdkwork-appstore-listing-service" }
sdkwork-appstore-release-service = { path = "../sdkwork-appstore-release-service" }
sdkwork-appstore-catalog-service = { path = "../sdkwork-appstore-catalog-service" }
sdkwork-appstore-library-service = { path = "../sdkwork-appstore-library-service" }
sdkwork-appstore-moderation-service = { path = "../sdkwork-appstore-moderation-service" }
sdkwork-appstore-compliance-service = { path = "../sdkwork-appstore-compliance-service" }
sdkwork-appstore-market-service = { path = "../sdkwork-appstore-market-service" }
