[package]
name = "sdkwork-appstore-standalone-gateway"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"


[[bin]]
name = "sdkwork-appstore-standalone-gateway"
path = "src/main.rs"

[dependencies]
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
dotenvy = "0.15"
sdkwork-appstore-service-host = { path = "../sdkwork-appstore-service-host" }
sdkwork-appstore-repository-sqlx = { path = "../sdkwork-appstore-repository-sqlx" }
sdkwork-appstore-publisher-service = { path = "../sdkwork-appstore-publisher-service" }
sdkwork-appstore-listing-service = { path = "../sdkwork-appstore-listing-service" }
sdkwork-appstore-release-service = { path = "../sdkwork-appstore-release-service" }
sdkwork-appstore-catalog-service = { path = "../sdkwork-appstore-catalog-service" }
sdkwork-appstore-library-service = { path = "../sdkwork-appstore-library-service" }
sdkwork-appstore-moderation-service = { path = "../sdkwork-appstore-moderation-service" }
sdkwork-appstore-compliance-service = { path = "../sdkwork-appstore-compliance-service" }
sdkwork-appstore-market-service = { path = "../sdkwork-appstore-market-service" }
sdkwork-appstore-database-host = { path = "../sdkwork-appstore-database-host" }
sdkwork-appstore-routes-common = { path = "../sdkwork-appstore-routes-common" }
sdkwork-database-config = { workspace = true }
sdkwork-database-sqlx = { workspace = true }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "postgres", "chrono"] }
sdkwork-iam-web-adapter = { workspace = true }
sdkwork-web-axum = { workspace = true }
sdkwork-web-core = { workspace = true }
sdkwork-web-bootstrap = { workspace = true }
sdkwork-utils-rust = { workspace = true }
sdkwork-routes-catalog-app-api = { path = "../sdkwork-routes-catalog-app-api" }
sdkwork-routes-catalog-backend-api = { path = "../sdkwork-routes-catalog-backend-api" }
sdkwork-routes-catalog-open-api = { path = "../sdkwork-routes-catalog-open-api" }
sdkwork-routes-listing-app-api = { path = "../sdkwork-routes-listing-app-api" }
sdkwork-routes-listing-backend-api = { path = "../sdkwork-routes-listing-backend-api" }
sdkwork-routes-listing-open-api = { path = "../sdkwork-routes-listing-open-api" }
sdkwork-routes-library-app-api = { path = "../sdkwork-routes-library-app-api" }
sdkwork-routes-publisher-app-api = { path = "../sdkwork-routes-publisher-app-api" }
sdkwork-routes-publisher-backend-api = { path = "../sdkwork-routes-publisher-backend-api" }
sdkwork-routes-release-app-api = { path = "../sdkwork-routes-release-app-api" }
sdkwork-routes-release-open-api = { path = "../sdkwork-routes-release-open-api" }
sdkwork-routes-compliance-app-api = { path = "../sdkwork-routes-compliance-app-api" }
sdkwork-routes-moderation-backend-api = { path = "../sdkwork-routes-moderation-backend-api" }
sdkwork-routes-market-backend-api = { path = "../sdkwork-routes-market-backend-api" }
sdkwork-routes-metrics-backend-api = { path = "../sdkwork-routes-metrics-backend-api" }
sdkwork-routes-automation-open-api = { path = "../sdkwork-routes-automation-open-api" }

