[package]
name = "sdkwork-routes-release-app-api"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
sdkwork-appstore-routes-common = { path = "../sdkwork-appstore-routes-common" }
sdkwork-appstore-release-service = { path = "../sdkwork-appstore-release-service" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sdkwork-web-core = { workspace = true }
axum = { version = "0.8", default-features = false, features = ["json"] }
sdkwork-iam-web-adapter = { workspace = true }
sdkwork-web-axum = { workspace = true }
sdkwork-web-bootstrap = { workspace = true }

[dev-dependencies]
sdkwork-web-core = { workspace = true }
